--- a/app/src/main/res/layout/fragment_meal.xml
+++ b/app/src/main/res/layout/fragment_meal.xml
@@ -3,52 +3,61 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".meal.Alacarte">
+    android:orientation="vertical"
+    tools:context=".meal.Meal">
 
     <RadioGroup
-        android:id="@+id/alacarte"
+        android:id="@+id/meal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal">
 
         <RadioButton
-            android:id="@+id/alacarte1"
+            android:id="@+id/meal1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingHorizontal="6dp"
-            android:paddingVertical="4dp"
             android:layout_marginHorizontal="4dp"
-            android:gravity="center"
+            android:layout_weight="1"
             android:background="@drawable/radio_flat_selector"
             android:button="@android:color/transparent"
-            android:textColor="@color/radio_flat_text_selector"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:text="Apartment Mess" />
+            android:paddingHorizontal="6dp"
+            android:paddingVertical="4dp"
+            android:text="@string/combo"
+            android:textColor="@color/radio_flat_text_selector" />
 
         <RadioButton
-            android:id="@+id/alacarte2"
+            android:id="@+id/meal2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingHorizontal="6dp"
-            android:paddingVertical="4dp"
             android:layout_marginHorizontal="4dp"
-            android:gravity="center"
+            android:layout_weight="1"
             android:background="@drawable/radio_flat_selector"
             android:button="@android:color/transparent"
-            android:textColor="@color/radio_flat_text_selector"
-            android:textSize="14sp"
+            android:paddingHorizontal="6dp"
+            android:paddingVertical="4dp"
+            android:text="North Menu\n\n\n"
             android:textStyle="bold"
-            android:text="Centralized Mess-1" />
+            android:textColor="@color/radio_flat_text_selector" />
 
+        <RadioButton
+            android:id="@+id/meal3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="4dp"
+            android:layout_weight="1"
+            android:background="@drawable/radio_flat_selector"
+            android:button="@android:color/transparent"
+            android:paddingHorizontal="6dp"
+            android:paddingVertical="4dp"
+            android:text="South Menu\n\n\n"
+            android:textStyle="bold"
+            android:textColor="@color/radio_flat_text_selector" />
     </RadioGroup>
 
 </LinearLayout>
