--- a/app/src/main/res/layout/fragment_standard_mess_four_meals.xml
+++ b/app/src/main/res/layout/fragment_standard_mess_four_meals.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".meal.StandardMessFourMeals">
 
     <RadioGroup
@@ -66,4 +67,9 @@
             android:text="Centralized Mess-2" />
     </RadioGroup>
 
-</FrameLayout>
+    <FrameLayout
+        android:id="@+id/messFourMeals"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
