--- a/app/src/main/res/layout/fragment_standard_mess_two_meals.xml
+++ b/app/src/main/res/layout/fragment_standard_mess_two_meals.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".meal.StandardMessTwoMeals">
 
     <RadioGroup
@@ -34,7 +35,7 @@
             android:text="Hostel Mess" />
 
         <RadioButton
-            android:id="@+id/standardTwoMeals3"
+            android:id="@+id/standardTwoMeals2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -50,4 +51,9 @@
             android:text="Centralized Mess-2" />
     </RadioGroup>
 
-</FrameLayout>
+    <FrameLayout
+        android:id="@+id/messTwoMeals"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
