--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="seat_size">48dp</dimen>
-
+    <dimen name="seat_width">48dp</dimen>
+    <dimen name="seat_height">48dp</dimen>
 </resources>
